--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -6,6 +7,7 @@
     <title>Document</title>
 </head>
 <link rel="stylesheet" href="style.css">
+
 <body>
     <main class="home">
         <div class="indexfront">
@@ -17,28 +19,29 @@
             </div>
             <div class="button">
                 <div class="rectangle-1"></div>
-                <div class="learn-more">Learn More</div>
+                <h4 class="learn-more">Learn More</h4>
             </div>
             <div class="main">
-                <div class="tittle">Kevin Abstract</div>
-                <div class="name">Clifford Ian Simpson</div>
-                <div class="paragraph">
+                <h1 class="tittle">Kevin <br>Abstract</br></h1>
+                <h2 class="name">Clifford Ian Simpson</h2>
+                <p class="paragraph">
                     Is an American rapper, singer, and songwriter and was a founding member
                     of Brockhampton. He released his debut album, MTV1987, in 2014 to
                     critical acclaim, and received attention from a number of major music
                     blogs and magazine publications. His second album, American Boyfriend: A
                     Suburban Love Story, was released in November 2016, and his third,
                     Arizona Baby, was released in April 2019.
-                </div>
+                </p>
                 <div class="kevin-abstract"></div>
             </div>
             <div class="nav-bar">
-                <div class="home-1">Home</div>
-                <div class="store">Store</div>
-                <div class="discography">Discography</div>
+                <h4 class="home-1">Home</h4>
+                <h4 class="store">Store</h4>
+                <h4 class="discography">Discography</h4>
                 <div class="line-1"></div>
             </div>
         </div>
     </main>
 </body>
+
 </html>
